Fixed bugs 11659 and 11611.
SVN-Revision: 18850